--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 .app-inner {
-    width: 100vw;
-    height: 100vh;
     position: relative;
-
-}
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+  }
