--- a/src/app/pages/cadusuario/cadusuario.component.html
+++ b/src/app/pages/cadusuario/cadusuario.component.html
@@ -1,5 +1,5 @@
 <div class="div-cadusuario">
-  <form [formGroup]="form">
+  <form [formGroup]="form" >
     <mat-card>
       <mat-card-title>
         Cadastro de Usuário
@@ -7,17 +7,17 @@
       <mat-card-content fxLayout="column">
         <div fxFlex>
           <mat-form-field fxFlex>
-            <input mat-input placeholder="Nome" formControlName="nome">
+            <input matInput placeholder="Nome" formControlName="nome">
           </mat-form-field>
         </div>
         <div fxFlex>
           <mat-form-field fxFlex>
-            <input mat-input type="email" placeholder="E-mail" formControlName="email">
+            <input matInput type="email" placeholder="E-mail" formControlName="email">
           </mat-form-field>
         </div>
         <div fxFlex>
           <mat-form-field fxFlex>
-            <input mat-input type="password" placeholder="Senha" formControlName="senha">
+            <input matInput type="password" placeholder="Senha" formControlName="senha">
           </mat-form-field>
         </div>
       </mat-card-content>
