--- a/src/app/pages/principal/principal.component.scss
+++ b/src/app/pages/principal/principal.component.scss
@@ -1,9 +1,14 @@
 
+
 .fill-span {
     flex: 1 1 auto;
 }
 .side-container {
     width: 100%;
     height: 100%;
-    position: relative;
+    position: absolute;
+    .side-menu {
+        width: 250px;
+    }
+
 }
