--- a/src/app/pages/cadusuario/cadusuario.component.html
+++ b/src/app/pages/cadusuario/cadusuario.component.html
@@ -22,7 +22,8 @@
         </div>
       </mat-card-content>
       <mat-card-actions>
-          <button mat-button color="primary" (click)="salvar()">Salvar</button>
+
+          <button mat-raised-button  color="primary" (click)="salvar()">Salvar</button>
       </mat-card-actions>
     </mat-card>
   </form>
