--- a/src/app/pages/pesquisausuario/pesquisausuario.component.html
+++ b/src/app/pages/pesquisausuario/pesquisausuario.component.html
@@ -13,7 +13,20 @@
         </div>
         <div fxFlex>
             <table mat-table [dataSource]="dataSource" >
- 
+                <ng-container matColumnDef="select">
+                    <th mat-header-cell *matHeaderCellDef>
+                      <mat-checkbox (change)="$event ? masterToggle() : null"
+                                    [checked]="selectionModel.hasValue() && isAllSelected()"
+                                    [indeterminate]="selectionModel.hasValue() && !isAllSelected()">
+                      </mat-checkbox>
+                    </th>
+                    <td mat-cell *matCellDef="let row">
+                      <mat-checkbox (click)="$event.stopPropagation()"
+                                    (change)="$event ? selectionModel.toggle(row) : null"
+                                    [checked]="selectionModel.isSelected(row)">
+                      </mat-checkbox>
+                    </td>
+                  </ng-container>
                 <ng-container matColumnDef="id">
                   <th mat-header-cell *matHeaderCellDef> Código </th>
                   <td mat-cell *matCellDef="let element"> {{element.id}} </td>
