--- a/src/app/pages/principal/principal.component.html
+++ b/src/app/pages/principal/principal.component.html
@@ -18,7 +18,7 @@
     <mat-drawer mode="side" opened class="side-menu">
         <mat-list>
           <mat-list-item > <a [routerLink]="['cad-usuario']">Novo Usuário</a></mat-list-item>
-          <mat-list-item > <a [routerLink]="[ '/cad-usuario']">Pesquisar Usuário</a></mat-list-item>
+          <mat-list-item > <a [routerLink]="[ 'pesquisa-usuario']">Pesquisar Usuário</a></mat-list-item>
           <mat-list-item > <a [routerLink]="[ '/cad-usuario']">Novo Cliente</a></mat-list-item>
         </mat-list>
     </mat-drawer>
