--- a/src/app/pages/pesquisausuario/pesquisausuario.component.html
+++ b/src/app/pages/pesquisausuario/pesquisausuario.component.html
@@ -6,9 +6,9 @@
       </mat-card-header>
       <mat-card-content fxLayout="column">
         <div fxLayout="row">
-            <mat-form-field class="example-full-width">
+            <mat-form-field fxFlex >
               <input matInput #inputPesquisa placeholder="Pesquisar" 
-                (ngModelChange)="pesquiar(inputPesquisa.value)">
+                (ngModelChange)="pesquisar(inputPesquisa.value)">
             </mat-form-field>
         </div>
         <div fxFlex>
@@ -50,7 +50,7 @@
         
       </mat-card-content>
       <mat-card-actions>
-
+        
       </mat-card-actions>
     </mat-card>
   </form>
