--- a/src/app/pages/pesquisausuario/pesquisausuario.component.scss
+++ b/src/app/pages/pesquisausuario/pesquisausuario.component.scss
@@ -1,6 +1,13 @@
 .page-pesquisa {
     width: 100%;
     height: 100%;
+    form {
+        width: 100%;
+        height: 100%;
+    }
+}
+table {
+    width: 100%;
 }
 
 .mat-column-select {
