--- a/src/app/pages/principal/principal.component.scss
+++ b/src/app/pages/principal/principal.component.scss
@@ -4,8 +4,8 @@
     flex: 1 1 auto;
 }
 .side-container {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: absolute;
     .side-menu {
         width: 250px;
