--- a/src/app/pages/principal/principal.component.html
+++ b/src/app/pages/principal/principal.component.html
@@ -19,7 +19,8 @@
         <mat-list>
           <mat-list-item > <a [routerLink]="['cad-usuario']">Novo Usuário</a></mat-list-item>
           <mat-list-item > <a [routerLink]="[ 'pesquisa-usuario']">Pesquisar Usuário</a></mat-list-item>
-          <mat-list-item > <a [routerLink]="[ '/cad-usuario']">Novo Cliente</a></mat-list-item>
+          <mat-list-item > <a [routerLink]="[ 'cadastro-produto']">Novo Produto</a></mat-list-item>
+          <mat-list-item > <a [routerLink]="[ 'pesquisa-produto']">Pesquisar Produto</a></mat-list-item>
         </mat-list>
     </mat-drawer>
     <mat-drawer-content>
