--- a/src/app/pages/pesquisaproduto/pesquisaproduto.component.html
+++ b/src/app/pages/pesquisaproduto/pesquisaproduto.component.html
@@ -1,14 +1,15 @@
-<div class="page-pesquisa"> 
-    <mat-card>
-      <mat-card-header>
-        Pesquisa de Usuários
-      </mat-card-header>
-      <mat-card-content fxLayout="column">
-        <form [formGroup]="form" fxLayout="row">
-          <mat-form-field fxFlex>
-            <input matInput placeholder="Pesquisar" #inputNome formControlName="nome" (ngModelChange)="pesquisar(inputNome.value)">
-          </mat-form-field>
-        </form> 
+<mat-card>
+  <mat-card-header>
+    <h2>Pesquisa de Produtos</h2>
+  </mat-card-header>
+  <mat-card-content fxFlex>
+      <form>
+        <div class="input-pesquisa">
+            <mat-form-field fxFlex>
+              <input matInput placeholder="Pesquisar" formControlName="pesquisa">
+            </mat-form-field>
+        </div>
+      </form>
       <table mat-table [dataSource]="dataSource" class="tbl-pesquisa" >
           <ng-container matColumnDef="select">
               <th mat-header-cell *matHeaderCellDef>
@@ -36,19 +37,17 @@
           </ng-container>
         
           <!-- Weight Column -->
-          <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef> E-mail </th>
-            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+          <ng-container matColumnDef="preco">
+            <th mat-header-cell *matHeaderCellDef> Preço </th>
+            <td mat-cell *matCellDef="let element"> {{element.preco}} </td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table> 
-        
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button color="primary" (click)="novo()">Novo</button>
-        <button mat-button color="secondary" (click)="alterar()">Alterar</button>
-        <button mat-button color="warn" (click)="excluir()">Excluir</button>
-      </mat-card-actions>
-    </mat-card>
-</div>
+  </mat-card-content>
+  <mat-card-actions>
+      <button mat-button color="primary" (click)="novo()">Novo</button>
+      <button mat-button color="secondary" (click)="alterar()">Alterar</button>
+      <button mat-button color="warn" (click)="excluir()">Excluir</button>
+  </mat-card-actions>
+</mat-card>
