--- a/src/app/pages/pesquisausuario/pesquisausuario.component.scss
+++ b/src/app/pages/pesquisausuario/pesquisausuario.component.scss
@@ -1,13 +1,27 @@
 .page-pesquisa {
-    width: 100%;
-    height: 100%;
-    form {
+    display: flex;
+    flex-direction: column !important;
+    padding-top: 1px;
+    position: relative;
+    overflow: hidden;
+    
+    mat-card-content {
+        // height: 100%;
+    }
+
+    mat-card-actions {
+        text-align: center;
+    }
+
+    .tbl-pesquisa {
         width: 100%;
-        height: 100%;
     }
 }
 table {
     width: 100%;
+}
+tbody {
+    overflow: auto;
 }
 
 .mat-column-select {
