--- a/src/app/pages/principal/principal.component.scss
+++ b/src/app/pages/principal/principal.component.scss
@@ -1,12 +1,18 @@
 
+.principal {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
 
 .fill-span {
     flex: 1 1 auto;
 }
 .side-container {
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
+    height: 100%;
+    
     .side-menu {
         width: 250px;
     }
